[package]
name = "fadec"
version = "0.1.0"
authors = ["Marcus Griep <marcus@griep.us>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata]
wasm-opt = false

[profile.release]
lto = true
# panic = "abort"

[dependencies]
avmath = { path = "./avmath" }
gauge-sys = { path = "./gauge-sys" }
num-derive = "*"
num-traits = "*"
simconnect-sys = { path = "./simconnect-sys" }
parking_lot = "*"
uom = "*"

[workspace]
members = [
    "avmath"
]