[package]
name = "wt_cj4"
version = "0.1.0"
authors = ["Marcus Griep <marcus@griep.us>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avmath = { path = "../avmath" }
uom = { version = "0.30.0" }
wt_systems = { path = "../wt_systems" }
serde = { version = "1", features = ["derive"], optional = true }
