[package]
name = "wt_systems"
version = "0.1.0"
authors = ["Marcus Griep <marcus@griep.us>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uom = { version = "0.30.0", default-features = false, features = ["f64", "si"]}
