[package]
name = "wt_systems"
version = "0.1.0"
authors = ["Marcus Griep <marcus@griep.us>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uom = { version = "0.30.0", features = ["f64", "std", "si"]}
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
csv = "*"
serde = { version = "1", features = ["derive"] }

[features]
non-zeroing = []